syntax = "proto3";

package blocks_proto;

option go_package = "./blocks_proto";

message GetAllBlockRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message GetAllBlockResponse {
  bool error = 1;
  repeated DataBlock data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}
message DataBlock{
  int64       id = 1;
  string      data = 2;
  int64       nonce = 3;
  int32       difficulty = 4;
  string      mined_by = 5;
  string      mined_at = 6;
  string      timestamp = 7;
  string      hash = 8;
  string      prev_hash = 9;
  int32       status_id = 10;
  string      id_user = 11;
  string      last_validation_date = 12;
  string      created_at = 13;
  string      updated_at = 14;
}

message GetByIdRequest {
  int64 id = 1;
}
message GetBlockByIDResponse {
  bool error = 1;
  DataBlock data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}


service blockServicesBlocks {
  rpc GetBlock(GetAllBlockRequest) returns (GetAllBlockResponse){}
  rpc GetBlockByID(GetByIdRequest) returns (GetBlockByIDResponse){}
}
